# Roozbeh_End2End_ML

./: README.md
iris-classifier/: Dockerfile  pyproject.toml  train.py
